# ner-pipeline

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: lela_bm25_only.json  lela_example.json  test_gliner_fuzzy_ce_transformers.json
data/test/: config_full_pipeline.json
docs/: API.md  CLI.md  DEVELOPMENT.md  LELA.md  PIPELINE.md  README.md  REQUIREMENTS.md  TESTING.md  TROUBLESHOOTING.md  WEB_APP.md
el_pipeline/: __init__.py  cli.py  memory.py  pipeline.py
el_pipeline/knowledge_bases/: __init__.py  custom.py  yago_downloader.py
el_pipeline/lela/: __init__.py  config.py  llm_pool.py  prompts.py
el_pipeline/spacy_components/: candidates.py  disambiguators.py  ner.py  rerankers.py
lela/: config.py  pipeline.py
lela/spacy_components/: candidates.py  disambiguators.py  ner.py  rerankers.py
ner_pipeline/: __init__.py  pipeline.py  registry.py  types.py
ner_pipeline/lela/: config.py  llm_pool.py  prompts.py
ner_pipeline/ner/: simple.py
ner_pipeline/spacy_components/: __init__.py  candidates.py  disambiguators.py  ner.py  rerankers.py
tests/: __init__.py  conftest.py
tests/data/: sample_kb.jsonl
tests/integration/: test_app.py  test_cache_integration.py  test_pipeline.py
tests/slow/: __init__.py  test_dense_candidate.py  test_real_models.py  test_spacy_ner.py  test_transformers_ner.py
tests/unit/: test_config.py  test_context.py  test_types.py
tests/unit/candidates/: __init__.py  test_candidate_cache.py  test_fuzzy_candidate.py  test_lela_bm25.py  test_lela_dense.py
tests/unit/ner/: __init__.py  (+2 more)
(+12 files in other folders)
